# TFG-25_26-AlbertoHernandez

./: .gitignore  BRIEF.md  CMakeLists.txt  LICENSE  README.md  ablation_analysis.py  ablation_results.csv  comparison_i01_i30.csv  gap_vs_best.py  some-touches.md  spatial-code-brief.md
doc/: decision_flow.tex  pseudocode_hybrid.tex
graficas/: comparison_summary.csv  comparison_summary_final.csv
graficas_v2/: comparison_summary.csv
graficas_v3/: comparison_summary.csv
history/: ACO-limitation-research.md  ACO.md  parametrizacion-analisis.md  project-history.md  some-touches.md
raw-runs/: README.md
raw-runs/hidden-instances/: m01_s123.json  m01_s13.json  m01_s2024.json  m01_s256.json  m01_s31.json  m01_s42.json  m01_s7.json  m01_s777.json  m01_s99.json  m02_s1009.json  m02_s123.json  m02_s13.json  m02_s2024.json  m02_s256.json  m02_s31.json  m02_s42.json  m02_s7.json  m02_s777.json  m02_s99.json  m03_s123.json  m03_s13.json  m03_s2024.json  m03_s256.json  m03_s31.json  m03_s42.json  m03_s7.json  m03_s777.json  m03_s99.json  m04_s1009.json  m04_s123.json  m04_s13.json  m04_s2024.json  m04_s256.json  m04_s31.json  m04_s42.json  m04_s7.json  m04_s777.json  m04_s99.json  m05_s123.json  m05_s13.json  (+243 more)
raw-runs/public-instances/: i01_s1009.json  i01_s123.json  i01_s13.json  i01_s2024.json  i01_s256.json  i01_s31.json  i01_s42.json  i01_s7.json  i01_s777.json  i01_s99.json  i02_s123.json  i02_s13.json  i02_s2024.json  i02_s256.json  i02_s31.json  i02_s42.json  i02_s7.json  i02_s777.json  i02_s99.json  i03_s1009.json  i03_s123.json  i03_s13.json  i03_s2024.json  i03_s256.json  i03_s31.json  i03_s42.json  i03_s7.json  i03_s777.json  i03_s99.json  i04_s123.json  i04_s13.json  i04_s2024.json  i04_s256.json  i04_s31.json  i04_s42.json  i04_s7.json  i04_s777.json  i04_s99.json  i05_s123.json  i05_s13.json  (+243 more)
scripts/: analyze_AB_vs_ABC.py  analyze_blockABC.py  analyze_blockF.py  analyze_hybrid.py  analyze_multiseed.py  analyze_phase2.py  analyze_polish.py  plot_comparison.py  plot_comparison_final.py  plot_comparison_v2.py  plot_comparison_v3.py  run_blockAB.sh  run_comparison.sh  run_one.sh  validate_and_compare.sh  validate_postfix.py
solutions/: i01_solution.json  i02_solution.json  i03_solution.json  i04_solution.json  i05_solution.json  i06_solution.json  i07_solution.json  i08_solution.json  i09_solution.json  i10_solution.json  i11_solution.json  i12_solution.json  i13_solution.json  i14_solution.json  i15_solution.json  i16_solution.json  i17_solution.json  i18_solution.json  i19_solution.json  i20_solution.json  i21_solution.json  i22_solution.json  i23_solution.json  i24_solution.json  i25_solution.json  i26_solution.json  i27_solution.json  i28_solution.json  i29_solution.json  i30_solution.json  m01_solution.json  m03_solution.json  m04_solution.json  m05_solution.json  m06_solution.json  m08_solution.json  m09_solution.json  m10_solution.json  m11_solution.json  m12_solution.json  (+20 more)
solutions_aco/: i01_solution.json  i02_solution.json  i03_solution.json  i04_solution.json  i05_solution.json  i06_solution.json  i07_solution.json  i08_solution.json  i09_solution.json  i10_solution.json  i11_solution.json  i12_solution.json  i13_solution.json  i14_solution.json  i15_solution.json  i16_solution.json  i17_solution.json  i18_solution.json  i19_solution.json  i20_solution.json  i21_solution.json  i22_solution.json  i23_solution.json  i24_solution.json  i25_solution.json  i26_solution.json  i27_solution.json  i28_solution.json  i29_solution.json  i30_solution.json
solutions_aco_v1/: i02_solution.json  i03_solution.json  i04_solution.json  i05_solution.json  i06_solution.json  i07_solution.json  i10_solution.json  i14_solution.json  i17_solution.json  i19_solution.json  i21_solution.json  i23_solution.json  i24_solution.json  i25_solution.json  i27_solution.json  i28_solution.json  i30_solution.json
solutions_m29_1h/: m29_solution.json
solutions_m_hybrid/: m01_solution.json  m02_solution.json  m03_solution.json  m04_solution.json  m05_solution.json  m06_solution.json  m07_solution.json  m08_solution.json  m09_solution.json  m10_solution.json  m11_solution.json  m12_solution.json  m13_solution.json  m14_solution.json  m15_solution.json  m16_solution.json  m17_solution.json  m18_solution.json  m19_solution.json  m20_solution.json  m21_solution.json  m22_solution.json  m23_solution.json  m24_solution.json  m25_solution.json  m26_solution.json  m27_solution.json  m28_solution.json  m29_solution.json  m30_solution.json
solutions_random/: i01_solution.json  i02_solution.json  i03_solution.json  i04_solution.json  i05_solution.json  i06_solution.json  i07_solution.json  i08_solution.json  i09_solution.json  i10_solution.json  i11_solution.json  i12_solution.json  i13_solution.json  i14_solution.json  i15_solution.json  i16_solution.json  i17_solution.json  i18_solution.json  i19_solution.json  i20_solution.json  i21_solution.json  i22_solution.json  i23_solution.json  i24_solution.json  i25_solution.json  i26_solution.json  i27_solution.json  i28_solution.json  i29_solution.json  i30_solution.json
src/: ablation_test.cpp  eval_solution.cpp  main.cpp  test_parser.cpp
src/common/: types.h
src/entities/: Nurse.h  Occupant.h  OperatingTheater.h  Patient.h  ProblemData.h  Room.h  Surgeon.h
src/evaluator/: Evaluator.cpp  Evaluator.h  FeasibilityChecker.cpp  FeasibilityChecker.h
src/io/: ProblemParser.h  SolutionIO.h  SolutionReader.h
src/solution/: Solution.cpp  Solution.h
src/solver/: ACOSolver.cpp  ACOSolver.h  ALNSPerturbation.cpp  ALNSPerturbation.h  CompoundMoves.cpp  CompoundMoves.h  LocalSearch.cpp  LocalSearch.h  (+4 more)
tables/: aco-AB-vs-ABC-vs-postfix.csv  aco-blockABC-vs-postfix.csv  aco-blockF-vs-ABC-vs-postfix.csv  aco-hybrid-vs-polish-vs-postfix.csv  aco-m-hybrid-vs-best.csv  aco-multiseed-stats.csv  aco-phase2-vs-polish-vs-postfix.csv  aco-polish-vs-ABCF-vs-postfix.csv  aco-random-comparison-postfix.csv  aco-random-comparison-v1.csv  aco-random-comparison-v2.csv  aco-random-comparison-v3.csv
tuning/: analyze.py  sweep.py
validator/: IHTP_Validator
